--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,23 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "system version:  3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]\n",
-      "tensorflow version:  2.10.1\n",
-      "available devices:  ['/device:CPU:0', '/device:GPU:0']\n",
-      "Num GPUs Available:  1\n",
-      "| ID | GPU | MEM |\n",
-      "------------------\n",
-      "|  0 |  6% | 23% |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.python.client import device_lib\n",
     "import sys\n",
@@ -84,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,47 +158,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_12 (Conv2D)          (None, 1, 63, 15, 128)    640       \n",
+      " conv2d_4 (Conv2D)           (None, 1, 63, 15, 128)    640       \n",
       "                                                                 \n",
-      " conv2d_13 (Conv2D)          (None, 1, 62, 14, 128)    65664     \n",
+      " conv2d_5 (Conv2D)           (None, 1, 62, 14, 128)    65664     \n",
       "                                                                 \n",
-      " max_pooling3d_6 (MaxPooling  (None, 1, 31, 7, 128)    0         \n",
+      " max_pooling3d_2 (MaxPooling  (None, 1, 31, 7, 128)    0         \n",
       " 3D)                                                             \n",
       "                                                                 \n",
-      " dropout_8 (Dropout)         (None, 1, 31, 7, 128)     0         \n",
+      " dropout_3 (Dropout)         (None, 1, 31, 7, 128)     0         \n",
       "                                                                 \n",
-      " conv2d_14 (Conv2D)          (None, 1, 30, 6, 128)     65664     \n",
+      " conv2d_6 (Conv2D)           (None, 1, 30, 6, 128)     65664     \n",
       "                                                                 \n",
-      " conv2d_15 (Conv2D)          (None, 1, 29, 5, 128)     65664     \n",
+      " conv2d_7 (Conv2D)           (None, 1, 29, 5, 128)     65664     \n",
       "                                                                 \n",
-      " max_pooling3d_7 (MaxPooling  (None, 1, 14, 2, 128)    0         \n",
+      " max_pooling3d_3 (MaxPooling  (None, 1, 14, 2, 128)    0         \n",
       " 3D)                                                             \n",
       "                                                                 \n",
-      " dropout_9 (Dropout)         (None, 1, 14, 2, 128)     0         \n",
+      " dropout_4 (Dropout)         (None, 1, 14, 2, 128)     0         \n",
       "                                                                 \n",
-      " reshape_2 (Reshape)         (None, 28, 128)           0         \n",
+      " reshape_1 (Reshape)         (None, 28, 128)           0         \n",
       "                                                                 \n",
-      " bidirectional_6 (Bidirectio  (None, 28, 100)          71600     \n",
+      " bidirectional_3 (Bidirectio  (None, 28, 100)          71600     \n",
       " nal)                                                            \n",
       "                                                                 \n",
-      " bidirectional_7 (Bidirectio  (None, 28, 100)          60400     \n",
+      " bidirectional_4 (Bidirectio  (None, 28, 100)          60400     \n",
       " nal)                                                            \n",
       "                                                                 \n",
-      " bidirectional_8 (Bidirectio  (None, 100)              60400     \n",
+      " bidirectional_5 (Bidirectio  (None, 100)              60400     \n",
       " nal)                                                            \n",
       "                                                                 \n",
-      " dropout_10 (Dropout)        (None, 100)               0         \n",
+      " dropout_5 (Dropout)         (None, 100)               0         \n",
       "                                                                 \n",
       " output (Dense)              (None, 9)                 909       \n",
       "                                                                 \n",
@@ -242,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,40 +247,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train feats.shape:  (594835, 64, 32)\n",
-      "train labels.shape:  (594835, 9)\n",
-      "test feats.shape:  (84464, 64, 32)\n",
-      "test labels.shape:  (84464, 9)\n",
-      "val feats.shape:  (86313, 64, 32)\n",
-      "val labels.shape:  (86313, 9)\n",
-      "train feats.shape:  (594835, 1, 64, 32, 1)\n",
-      "train labels.shape:  (594835, 9)\n",
-      "test feats.shape:  (84464, 1, 64, 32, 1)\n",
-      "test labels.shape:  (84464, 9)\n",
-      "val feats.shape:  (86313, 1, 64, 32, 1)\n",
-      "val labels.shape:  (86313, 9)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load data and reshape for training\n",
-    "DATA_ID = '_128mel_16frames_0.1sec'\n",
+    "DATA_ID = '_64mel_16frames_50ms'\n",
     "\n",
-    "train_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_feats\" + DATA_ID + \".npy\"\n",
-    "train_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_labels\" + DATA_ID + \".npy\"\n",
+    "train_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_feats.npy\"\n",
+    "train_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"train_labels.npy\"\n",
     "\n",
-    "test_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"test_feats\" + DATA_ID + \".npy\"\n",
-    "test_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"test_labels\" + DATA_ID + \".npy\"\n",
+    "test_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"test_feats.npy\"\n",
+    "test_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"test_labels.npy\"\n",
     "\n",
-    "val_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"val_feats\" + DATA_ID + \".npy\"\n",
-    "val_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"val_labels\" + DATA_ID + \".npy\"\n",
+    "val_feats_path = \"data/dataset\" + DATA_ID + \"/\" + \"val_feats.npy\"\n",
+    "val_labels_path = \"data/dataset\" + DATA_ID + \"/\" + \"val_labels.npy\"\n",
     "\n",
     "with tf.device('/CPU:0'):\n",
     "    # load in data\n",
@@ -332,27 +299,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "594835/594835 [==============================] - 15587s 26ms/step - loss: 0.1581 - macro_soft_f1: 0.9904 - val_loss: 0.1520 - val_macro_soft_f1: 0.9893 - lr: 1.0000e-06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train the network!\n",
-    "EPOCHS = 1\n",
-    "BATCH_SIZE = 1\n",
+    "EPOCHS = 5\n",
+    "BATCH_SIZE = 16\n",
     "\n",
     "# Define some callbacks to improve training.\n",
     "#early_stopping = keras.callbacks.EarlyStopping(monitor=\"val_loss\", patience=10)\n",
     "reduce_lr = keras.callbacks.ReduceLROnPlateau(monitor=\"val_loss\", patience=5)\n",
     "\n",
-    "with tf.device('/GPU:0'):\n",
+    "with tf.device('/CPU:0'):\n",
     "    model.fit(\n",
     "        x=train_feats_npy, \n",
     "        y=train_labels_npy, \n",
@@ -377,31 +336,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:absl:Found untraced functions such as _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, _jit_compiled_convolution_op, lstm_cell_19_layer_call_fn while saving (showing 5 of 16). These functions will not be directly callable after loading.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec_1batch_1epochs\\assets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Assets written to: models/model_64mel_16frames_0.05sec_1batch_1epochs\\assets\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save model\n",
     "\n",
@@ -412,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -426,12 +363,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "2eb717040054f9e1cd6390da57b4c3f6de62338193843f816e8f12a4d5407ba0"
+    "hash": "d9d4ae5fd18cb6e0de1c1eb4db069b31104280bf1d614fdd82a44e1260f58cd8"
    }
   }
  },
